cluster/home/uptimekuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      volumes:
        - name: uptime-kuma
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.23.8
          ports:
            - containerPort: 3001
          volumeMounts:
            - mountPath: /app/data
              name: uptime-kuma
          resources:
            requests:
              memory: "150Mi"
              cpu: "15m"
          # livenessProbe:
          #   exec:
          #     command:
          #       - node
          #       - extra/healthcheck.js
          #   initialDelaySeconds: 180
          #   periodSeconds: 60
          #   timeoutSeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3001
          #     scheme: HTTP
