cluster/home/uptimekuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.local.cjsolsen.com`)
      kind: Rule
      services:
        - name: uptime-kuma-svc
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: uptime-kuma-cjsolsen-com-tls
